--- a/src/main/webapp/script/caso/responder.xhtml
+++ b/src/main/webapp/script/caso/responder.xhtml
@@ -15,12 +15,12 @@
                 <p style="color: #999;">
                     Haz click para  
                     <strong><p:commandLink actionListener="#{casoController.enableCommentMode()}" value=" Agregar un Comentario"  styleClass="fa fa-comments"
-                                             update="formCreateNota"/></strong>
+                                           update="formCreateNota"/></strong>
                     ,
                     <strong><p:commandLink actionListener="#{casoController.enableReplyMode(false)}" value=" Responder" styleClass="fa fa-envelope"
                                            update="formCreateNota"/></strong>
                     o <strong><p:commandLink actionListener="#{casoController.enableReplyMode(true)}" value=" Responder a Todos" styleClass="fa fa-envelope"
-                                           update="formCreateNota"/></strong>
+                                             update="formCreateNota"/></strong>
                 </p>
             </p:panel>
 
@@ -62,10 +62,13 @@
                                     </p:column>
                                 </p:column >
                                 <p:column colspan="10">
-                                    <p:autoComplete style="width: 100%;" id="otroEmail" multiple="true" value="#{casoController.otroEmail}" completeMethod="#{emailClienteController.completeEmailClienteString}"
-                                                    var="email"  itemValue="#{email}" itemLabel="#{email}"  forceSelection="false">
+                                    <p:autoComplete id="otroEmail" style="width: 100%;"  multiple="true" emptyMessage="No matches found"
+                                                    placeholder="Destination addresses" 
+                                                    value="#{casoController.otroEmail}" 
+                                                    required="true" requiredMessage="Favor agregar un destinatario para este mensaje."
+                                                    completeMethod="#{emailClienteController.completeEmailClienteString}"
+                                                    var="email"  itemValue="#{email}" itemLabel="#{email}"  forceSelection="true">
                                     </p:autoComplete>
-                                    <p:watermark for="otroEmail" value="email destino"/>
                                 </p:column>
                             </p:row>
                         </p:panelGrid>
