--- a/src/main/webapp/script/canal/List.xhtml
+++ b/src/main/webapp/script/canal/List.xhtml
@@ -42,6 +42,10 @@
                             </div>
                         </p:column>
 
+                        <p:column headerText="Tipo">
+                            <h:outputText value="#{item.idTipoCanal.nombre}" title="#{item.idTipoCanal.iconStyleClass}"/>
+                        </p:column> 
+                        
                         <p:column headerText="#{bundle.ListCanalTitle_nombre}" width="240">
                             <i class="#{(item.idTipoCanal.idTipo eq 'EMAIL') ? 'fa fa-envelope-o fa-lg':((item.idTipoCanal.idTipo eq 'CHAT') ? 'fa fa-comment-o fa-lg':((item.idTipoCanal.idTipo eq 'MANUAL') ? 'fa fa-pencil-square-o fa-lg':((item.idTipoCanal.idTipo eq 'FORMULARIO') ? 'fa fa-list-alt fa-lg':'')))}"></i>
                             &nbsp;
