--- a/src/main/webapp/resources/go/entityCriteria.xhtml
+++ b/src/main/webapp/resources/go/entityCriteria.xhtml
@@ -51,18 +51,18 @@
             <div class="col-xs-4 col-sm-5">
                 <div class="form-group no-margin-hr">
                      
-                        <p:inputText id="valortext" value="#{cc.attrs.filtro.valor}" 
+                        <h:inputText id="valortext" value="#{cc.attrs.filtro.valor}" 
                                  rendered="#{cc.attrs.filtro.idCampo ne null and cc.attrs.filtro.idComparador ne null and cc.attrs.filterHelper.getComparableField(cc.attrs.filtro.idCampo).fieldTypeId.fieldTypeId eq 'TEXT'}" 
                                  required="true" requiredMessage="Se necesita un valor para comparar." disabled="#{not cc.attrs.canChangeFilters}" 
                                  styleClass="form-control input-sm">
                         <p:ajax update="@(form :not(.noupdate)) #{cc.attrs.update}"/>
-                    </p:inputText>
+                    </h:inputText>
 
-                    <p:inputText id="valorNumber" value="#{cc.attrs.filtro.valor}" 
+                    <h:inputText id="valorNumber" value="#{cc.attrs.filtro.valor}" 
                                  rendered="#{cc.attrs.filtro.idCampo ne null and cc.attrs.filtro.idComparador ne null and cc.attrs.filterHelper.getComparableField(cc.attrs.filtro.idCampo).fieldTypeId.fieldTypeId eq 'NUMBER'}" 
                                  required="true" requiredMessage="Se necesita un valor para comparar." disabled="#{not cc.attrs.canChangeFilters}" styleClass="form-control input-sm">
                         <p:ajax update="@(form :not(.noupdate)) #{cc.attrs.update}"/>
-                    </p:inputText>
+                    </h:inputText>
 
                     <pe:keyFilter for="valorNumber" mask="int" 
                                   rendered="#{cc.attrs.filtro.idCampo ne null and cc.attrs.filtro.idComparador ne null and cc.attrs.filterHelper.getComparableField(cc.attrs.filtro.idCampo).fieldTypeId.fieldTypeId eq 'NUMBER'}" />
@@ -77,7 +77,7 @@
                                     required="true" requiredMessage="Debe Seleccionar un #{cc.attrs.filterHelper.getComparableField(cc.attrs.filtro.idCampo).label}."
                                     rendered="#{cc.attrs.filtro.idCampo ne null and cc.attrs.filtro.idComparador ne null 
                                                 and cc.attrs.filterHelper.getComparableField(cc.attrs.filtro.idCampo).fieldTypeId.fieldTypeId eq 'SELECTONE_ENTITY' 
-                                                and cc.attrs.filtro.idComparador.idComparador ne 'SC'}" styleClass="form-control input-sm full-width">  
+                                                and cc.attrs.filtro.idComparador.idComparador ne 'SC'}" styleClass="form-control input-sm">  
                         <f:attribute name="filtro" value="#{cc.attrs.filtro}" />
                         <p:ajax event="itemSelect" update="@(form :not(.noupdate)) #{cc.attrs.update}"/>
                     </p:autoComplete>   
@@ -94,7 +94,7 @@
                     </div>
 
                 
-                    <p:autoComplete styleClass="form-control input-sm full-width" value="#{cc.attrs.filtro.valoresList}" forceSelection="true"  
+                    <p:autoComplete styleClass="form-control input-sm" value="#{cc.attrs.filtro.valoresList}" forceSelection="true"  
                                     disabled="#{not cc.attrs.canChangeFilters}"
                                     required="true" requiredMessage="Se necesita un valor para comparar."
                                     completeMethod="#{applicationBean.findEtiquetasByPattern}" multiple="true"
@@ -132,21 +132,21 @@
                     <script>
 
                     </script>
-                    <p:inputText id="valorcalendar1" styleClass="datepicker form-control input-sm" disabled="#{not cc.attrs.canChangeFilters}" 
+                    <h:inputText id="valorcalendar1" styleClass="datepicker form-control input-sm" disabled="#{not cc.attrs.canChangeFilters}" 
                                  value="#{cc.attrs.filtro.valor}"  title="Desde:"
                                  required="true" requiredMessage="Se necesita un valor para comparar."
                                  rendered="#{cc.attrs.filtro.idCampo ne null and cc.attrs.filtro.idComparador ne null 
                                              and cc.attrs.filterHelper.getComparableField(cc.attrs.filtro.idCampo).fieldTypeId.fieldTypeId eq 'CALENDAR'}">
                         <p:ajax update="@(form :not(.noupdate)) #{cc.attrs.update}"/>
-                    </p:inputText>
-                    <p:inputText id="valorcalendar2" styleClass="datepicker form-control input-sm" value="#{cc.attrs.filtro.valor2}" 
+                    </h:inputText>
+                    <h:inputText id="valorcalendar2" styleClass="datepicker form-control input-sm" value="#{cc.attrs.filtro.valor2}" 
                                  disabled="#{not cc.attrs.canChangeFilters}"  title="Hasta:"
                                  required="true" requiredMessage="Se necesita un valor para comparar."
                                  rendered="#{cc.attrs.filtro.idCampo ne null and cc.attrs.filtro.idComparador ne null 
                                              and cc.attrs.filterHelper.getComparableField(cc.attrs.filtro.idCampo).fieldTypeId.fieldTypeId eq 'CALENDAR' 
                                              and cc.attrs.filtro.idComparador.idComparador eq 'BW'}">
                         <p:ajax update="@(form :not(.noupdate)) #{cc.attrs.update}"/>
-                    </p:inputText>
+                    </h:inputText>
 
                 </div>
             </div>
